--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,7 +24,7 @@
 							<a class="nav-link" href="/start">Start <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item active">
-							<a class="nav-link" href="/start2">Start2 <span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="/visit">Visit <span class="sr-only">(current)</span></a>
 						</li>
 					</ul>
 				</div>
