--- a/views/visit.erb
+++ b/views/visit.erb
@@ -7,7 +7,7 @@
 	<input type="text" name="name_"/>
 	<input type="text" name="cell_"/>
 	<input type="text" name="date_"/>
-	<input type="submit" />
+	<input type="submit" class="btn btn-lg btn-primary"/>
 
 
 
