--- a/views/showu.erb
+++ b/views/showu.erb
@@ -3,8 +3,10 @@
 	<%= @title %>
 
 </h1>
-
+<table class="table table-striped">
 <h2>Text file:</h2>
 <% @logfile.each_line do |line| %>
-  <p> <%= line %> </p>
+  <table class="table table-striped">
+   <%= line %> 
+   </table>
 <% end %>
