--- a/views/visit.erb
+++ b/views/visit.erb
@@ -3,12 +3,14 @@
 
 <form action="/visit" method="POST">
 
-
-	<input type="text" name="name_"/>
-	<input type="text" name="cell_"/>
-	<input type="text" name="date_"/>
-	<input type="submit" class="btn btn-lg btn-primary"/>
-
-
-
+  <div class="form-group">
+    <label for="exampleInputText">Name</label>
+    <input type="text" class="form-control" name="name_" placeholder="Enter your name">
+    <label for="exampleInputText">Cell</label>
+    <input type="text" class="form-control" name="cell_" placeholder="Enter your cell number">
+    <label for="exampleInputText">Date</label>
+    <input type="text" class="form-control" name="date_" placeholder="Enter visit date">
+   </div>
+    <button type="submit" class="btn btn-primary" >Submit</button>
 </form>
+  
