--- a/views/visit.erb
+++ b/views/visit.erb
@@ -4,11 +4,11 @@
 <form action="/visit" method="POST">
 
   <div class="form-group">
-    <label for="exampleInputText">Name</label>
+    <label >Name</label>
     <input type="text" class="form-control" name="name_" placeholder="Enter your name">
-    <label for="exampleInputText">Cell</label>
+    <label >Cell</label>
     <input type="text" class="form-control" name="cell_" placeholder="Enter your cell number">
-    <label for="exampleInputText">Date</label>
+    <label >Date</label>
     <input type="text" class="form-control" name="date_" placeholder="Enter visit date">
    </div>
     <button type="submit" class="btn btn-primary" >Submit</button>
